@startuml erd_diagram
skinparam backgroundColor #FAFAFA
skinparam entity {
    BackgroundColor #EEF4FF
    BorderColor     #4A6FA5
    FontName        Arial
    FontSize        12
    FontColor       #1A1A2E
}
skinparam arrow {
    Color           #4A6FA5
    FontSize        10
    FontColor       #333333
}
skinparam noteFontSize 10
skinparam shadowing false

hide circle
hide empty methods

' ============================================================
' SLOWNIKI
' ============================================================

entity USER_STATUSES {
    * STATUS_CODE : VARCHAR2(20) <<PK>>
    --
    DESCRIPTION : VARCHAR2(300)
}

entity POST_CATEGORIES {
    * CATEGORY_ID : NUMBER <<PK>>
    --
    * NAME : VARCHAR2(100)
    DESCRIPTION : VARCHAR2(500)
    IS_POLITICAL : NUMBER(1)
    POLITICAL_LEAN : VARCHAR2(20)
}

entity SPECIAL_ATTENTION_REASONS {
    * REASON_ID : NUMBER <<PK>>
    --
    * NAME : VARCHAR2(100)
    DESCRIPTION : VARCHAR2(500)
    * SEVERITY_LEVEL : NUMBER(1)
}

' ============================================================
' GLOWNE ENCJE
' ============================================================

entity ADMINS {
    * ADMIN_ID : NUMBER <<PK>>
    --
    * USERNAME : VARCHAR2(100) <<UQ>>
    * PASSWORD_HASH : VARCHAR2(255)
    * PERMISSION_LEVEL : NUMBER(1)
}

entity USERS {
    * USER_ID : NUMBER <<PK>>
    --
    * FIRST_NAME : VARCHAR2(100)
    * LAST_NAME : VARCHAR2(100)
    * EMAIL : VARCHAR2(255) <<UQ>>
    CREATED_AT : TIMESTAMP
    STATUS : VARCHAR2(20) <<FK>>
}

entity POSTS {
    * POST_ID : NUMBER <<PK>>
    --
    * AUTHOR_ID : NUMBER <<FK>>
    * CATEGORY_ID : NUMBER <<FK>>
    REASON_ID : NUMBER <<FK>>
    SEVERITY_SCORE : NUMBER(1)
    * CONTENT_SUMMARY : VARCHAR2(500)
    CREATED_AT : TIMESTAMP
    IS_FLAGGED : NUMBER(1)
}

' ============================================================
' AKTYWNOSCI
' ============================================================

entity LIKES {
    * LIKE_ID : NUMBER <<PK>>
    --
    * USER_ID : NUMBER <<FK>>
    * POST_ID : NUMBER <<FK>>
    LIKED_AT : TIMESTAMP
}

entity COMMENTS {
    * COMMENT_ID : NUMBER <<PK>>
    --
    * USER_ID : NUMBER <<FK>>
    * POST_ID : NUMBER <<FK>>
    * CONTENT : VARCHAR2(2000)
    COMMENTED_AT : TIMESTAMP
}

entity SHARES {
    * SHARE_ID : NUMBER <<PK>>
    --
    * FROM_USER_ID : NUMBER <<FK>>
    * POST_ID : NUMBER <<FK>>
    TO_USER_ID : NUMBER <<FK>>
    SHARED_AT : TIMESTAMP
}

entity POST_VIEWS {
    * VIEW_ID : NUMBER <<PK>>
    --
    * USER_ID : NUMBER <<FK>>
    * POST_ID : NUMBER <<FK>>
}

' ============================================================
' PROFIL BEHAWIORALNY
' ============================================================

entity USER_PROFILES {
    * PROFILE_ID : NUMBER <<PK>>
    --
    * USER_ID : NUMBER <<FK>> <<UQ>>
    PREFERRED_CATEGORY_ID : NUMBER <<FK>>
    PREFERRED_TOPICS : VARCHAR2(500)
    ENGAGEMENT_SCORE : NUMBER(5,2)
    ACTIVITY_PROFILE : VARCHAR2(20)
    POLITICAL_LEAN : VARCHAR2(20)
    POLITICAL_SCORE : NUMBER(5,2)
    EXTREMISM_EXPOSURE : NUMBER(1)
    SOCIAL_CLUSTER_ID : NUMBER
    OPINION_INFLUENCE_TIMELINE : VARCHAR2(20)
    DIGITAL_FINGERPRINT : VARCHAR2(64) <<UQ>>
    LAST_UPDATED : TIMESTAMP
}

' ============================================================
' RELACJE
' ============================================================

' Slowniki -> glowne encje
USER_STATUSES       ||--o{ USERS           : "status"
POST_CATEGORIES     ||--o{ POSTS           : "kategoria"
SPECIAL_ATTENTION_REASONS |o--o{ POSTS    : "powod uwagi"
POST_CATEGORIES     |o--o{ USER_PROFILES  : "preferowana\nkategoria"

' Uzytkownicy -> posty / aktywnosci
USERS               ||--o{ POSTS           : "tworzy"
USERS               ||--o{ LIKES           : "lubi"
USERS               ||--o{ COMMENTS        : "komentuje"
USERS               ||--o{ POST_VIEWS      : "ogląda"
USERS               ||--o{ SHARES          : "udostępnia\n(from)"
USERS               |o--o{ SHARES          : "otrzymuje\n(to)"

' Posty -> aktywnosci
POSTS               ||--o{ LIKES           : "ma polubienia"
POSTS               ||--o{ COMMENTS        : "ma komentarze"
POSTS               ||--o{ SHARES          : "jest udostępniany"
POSTS               ||--o{ POST_VIEWS      : "ma wyswietlenia"

' Profil behavioralny
USERS               ||--|| USER_PROFILES   : "posiada profil"

@enduml
